# rust-speed-monitor

./: Cargo.toml  LICENSE
public/: index.html
public/static/js/: Application.js  Chart.js  init.js
src/: error.rs  lib.rs  options.rs  server.rs
src/config/: mod.rs
src/handler/: data.rs  error.rs  metrics.rs  mod.rs  util.rs
src/http/: mod.rs
src/metric/: error.rs  mod.rs
src/worker/: error.rs  file.rs  http.rs  mod.rs  speed.rs  tcp.rs
