[package]
name = "speed-monitor"
version = "0.1.0"
authors = ["Anton Shabanov <snakesolid@ngs.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
iron = "0.6"
log = "0.4"
mount = "0.4"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
staticfile = "0.5"
structopt = "0.3"
time = "0.2"

[dependencies.reqwest]
version = "0.10"
features = [ "blocking" ]

[dependencies.tokio]
version = "0.2"
features = [ "io-util", "macros", "net" ]
